<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_15sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_warning"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_title"
            android:fontFamily="@font/inter_bold"
            android:padding="@dimen/_7sdp"
            android:text="@string/txt_notification"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/tvNotifiSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:padding="@dimen/_15sdp"
            android:text="@string/txt_you_want_to_sign_out"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_16ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_7sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvNOSignOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/inter_medium"
                android:paddingHorizontal="@dimen/_7sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/txt_deny"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_13ssp" />

            <TextView
                android:id="@+id/tvYESSignOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/inter_medium"
                android:paddingHorizontal="@dimen/_7sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/txt_yes"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>