<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.signin.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_20sdp"
            app:cardElevation="@null"
            app:layout_constraintBottom_toTopOf="@+id/llSignIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/icon_sign_in" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/llSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/txt_sign_in_uppercase"
                android:textAlignment="center"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_23ssp" />

            <EditText
                android:id="@+id/edtAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_sign_in"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:drawableTint="@color/color_text_hint"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/txt_account"
                android:inputType="none"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:id="@+id/tvTitleWarningAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/txt_account_not_exist"
                android:textColor="@color/color_red"
                android:textSize="@dimen/_13ssp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_sign_in"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/color_text_hint"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/txt_pass"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_15ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTitleWarningPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/txt_wrong_pass"
                android:textColor="@color/color_red"
                android:textSize="@dimen/_13ssp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/inter_semibold"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_sign_in_uppercase"
                android:textAlignment="center"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/txt_forgot_pass"
                android:textAlignment="center"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>